--- a/bankproject/src/main/resources/static/css/test.css
+++ b/bankproject/src/main/resources/static/css/test.css
@@ -1,7 +1,36 @@
+@charset "utf-8";
+@import url('fonts.css');
+@import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
 
-#red {
-    color: red;
-}
-#green {
-    color: green;
-}
+/* 공통 */
+body {color: #333; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-sizing: border-box; scroll-behavior: smooth; overflow-x: hidden; }
+#wrap {max-width: 100%; height: 100%; margin: 0 auto;}
+main {max-width: 1200px; height: 100%; margin: 0 auto;}
+
+
+/* 헤더 */
+header {width: 100%; height: 100px; position: fixed; z-index: 9999; transition: 0.3s; background: rgba(0,0,0,0.5);}
+header > h1 {display: flex; justify-content: center; align-items: center; width: 150px;}
+header > .manager {display: flex;  justify-content: end; width: 100%;}
+header:hover{height: 300px; background: rgba(0,0,0,0.5); color: #fff;}
+header:hover #box-bg{opacity: 1; transition: all 0.1s;  font-weight: 300; font-size: 16px; }
+header:hover .sub-nav {opacity: 1; transition: all 0.1s;}
+header:hover .sub-nav > li {width: 100%;padding: 10px 0;}
+.sub-nav{opacity: 0; font-size: 16px; }
+#header-box {display: flex; justify-content: space-between; max-width: 1200px; height: 100px; padding: 30px; margin: 0 auto;}
+
+/* 메뉴 */
+.nav {display: flex; align-items: center; gap: 100px; font-size: 24px; font-weight: 500; text-align: center; }
+#box-bg {opacity: 0;transition: 0.3s;padding-top: 30px;display: flex;}
+
+/* main */
+main {position: relative; width: 100%; height: 100%; padding-top: 100px;}
+.baner-img {width: 100%; }
+.text-bold {font-weight: 500; font-size: 24px;}
+.text-box { width: 100%; height: 200px; padding: 50px; font-size: 20px; background:#3074F0; color: #fff; border-radius: 30px;}
+
+.news-box {width: 100%; height: 100%; margin: 0 auto;}
+.news-box > h2 {font-size: 30px; font-weight: 500; color: #333;}
+.news-box > ul {display: grid;align-items: center; grid-template-columns: repeat(3, 1fr); row-gap: 30px; }
+.news-box > ul > li {width: 300px; height: 400px; margin: 0 auto; background: #26a7e2; border-radius: 50px; text-align: center; }
+
