--- a/bankproject/src/main/resources/templates/test.html
+++ b/bankproject/src/main/resources/templates/test.html
@@ -4,15 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>테스트</title>
-    <link rel="stylesheet" href="/css/test.css">
-    <script src="/js/test.js"></script>
+		<link rel="stylesheet" href="../static/css/reset.css">
+		<link rel="stylesheet" href="../static/css/all.min.css">
+		<link rel="stylesheet" href="../static/css/fonts.css">
+    <link rel="stylesheet" href="../static/css/test.css">
+    <script src="../static/js/test.js"></script>
 </head>
 <body>
-    <div id="red">
-        asfasfasfasf
-    </div>
-    <div id="green">
-        asasfasfasf
-    </div>
+	<div id="wrap">
+		<header>
+			<div id="header-box">
+				<h1 class="logo">로고</h1>
+				<div>
+					<ul class="nav">
+						<li class="main-menu"><a href="#">MY</a>
+							<ul class="sub-nav">
+								<li class="sub-menu"><a href="#">로그인</a></li>
+								<li class="sub-menu"><a href="#">회원가입</a></li>
+							</ul>
+						</li>
+						<li class="main-menu"><a href="#">통장</a>
+							<ul class="sub-nav">
+								<li class="sub-menu"><a href="#">통장개설</a></li>
+								<li class="sub-menu"><a href="#">계좌조회</a></li>
+							</ul>
+						</li>
+						<li class="main-menu"><a href="#">이체</a>
+							<ul class="sub-nav">
+								<li class="sub-menu"><a href="#">계좌이체</a></li>
+								<li class="sub-menu"><a href="#">증권이체</a></li>
+							</ul>
+						</li>
+						<li class="main-menu"><a href="#">상품</a>
+							<ul class="sub-nav">
+								<li class="sub-menu"><a href="#">증권 구매</a></li>
+								<li class="sub-menu"><a href="#">증권 판매</a></li>
+							</ul>
+						</li>
+					</ul>
+					<div id="box-bg">
+					</div>
+				</div>
+				<div class="top-nav">
+					<span><a href="#">금융가이드</a></span>
+					<span><a href="#">관리자</a></span>
+					<span><a href="#">로그인</a></span>
+				</div>
+			</div>
+		</header>
+		<main class="main">
+			<div class="baner-img">
+				<img src="../static/img/main-baner.png" alt="배너">
+			</div>
+			<div class="text-box"><span class="text-bold">고객님을 위해, 저희는 뛰어다닙니다.</span><br>오늘도 행복한 하루 되세요.</div>
+			<div class="news-box">
+				<h2>News</h2>
+				<ul class="card">
+					<li><a href="#">뉴스레터</a></li>
+					<li><a href="#">뉴스레터</a></li>
+					<li><a href="#">뉴스레터</a></li>
+					<li><a href="#">뉴스레터</a></li>
+					<li><a href="#">뉴스레터</a></li>
+					<li><a href="#">뉴스레터</a></li>
+				</ul>
+			</div>
+		</main>
+	</div>
 </body>
 </html>
