--- a/bankproject/src/main/resources/templates/index.html
+++ b/bankproject/src/main/resources/templates/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>테스트</title>
-		<link rel="stylesheet" href="../static/css/reset.css">
-		<link rel="stylesheet" href="../static/css/all.min.css">
-		<link rel="stylesheet" href="../static/css/fonts.css">
-    <link rel="stylesheet" href="../static/css/test.css">
-    <script src="../static/js/test.js"></script>
+		<link rel="stylesheet" th:href="@{/css/reset.css}">
+		<link rel="stylesheet" th:href="@{/css/all.min.css}">
+		<link rel="stylesheet" th:href="@{/css/fonts.css}">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <script src="/js/index.js"></script>
 </head>
 <body>
 	<div id="wrap">
 		<header>
 			<div id="header-box">
-				<h1 class="logo">로고</h1>
+				<h1 class="logo"><a href="#"><img src="/img/logo_white.png" alt="패스뱅크"></a></h1>
 				<div>
 					<ul class="nav">
 						<li class="main-menu"><a href="#">MY</a>
@@ -53,14 +53,20 @@
 			</div>
 		</header>
 		<main class="main">
-			<div class="baner-img">
-				<img src="../static/img/main-baner.png" alt="배너">
+			<div class="main-banner">
+				<div class="main-text">
+					<h2>처음하는 금융생활,<br>바로 여기서 시작해보세요.</h2>
+					<a href="#" class="banner-btn btn">자세히 보기</a>
+				</div>
 			</div>
-			<div class="text-box"><span class="text-bold">고객님을 위해, 저희는 뛰어다닙니다.</span><br>오늘도 행복한 하루 되세요.</div>
 			<div class="news-box">
 				<h2>News</h2>
 				<ul class="card">
-					<li><a href="#">뉴스레터</a></li>
+					<li><a href="#"></a>
+					<ul class="card-box">
+						<li>제목</li>
+					</ul>
+					</li>
 					<li><a href="#">뉴스레터</a></li>
 					<li><a href="#">뉴스레터</a></li>
 					<li><a href="#">뉴스레터</a></li>
