--- a/bankproject/src/main/resources/templates/index.html
+++ b/bankproject/src/main/resources/templates/index.html
@@ -48,7 +48,7 @@
 				<div class="top-nav">
 					<span><a href="#">금융가이드</a></span>
 					<span><a href="#">관리자</a></span>
-					<span><a href="#">로그인</a></span>
+					<span><a href="#">${id} 로그인</a></span>
 				</div>
 			</div>
 		</header>
