헤더 메뉴 재수정

--- a/bankproject/src/main/resources/templates/index.html
+++ b/bankproject/src/main/resources/templates/index.html
@@ -15,8 +15,8 @@
 		<header>
 			<div id="header-box">
 				<h1 class="logo"><a href="#"><img src="/img/logo_white.png" alt="패스뱅크"></a></h1>
-				<div>
-					<ul class="nav">
+				<div class="nav">
+					<ul>
 						<li class="main-menu"><a href="#">MY</a>
 							<ul class="sub-nav">
 								<li class="sub-menu"><a href="#">로그인</a></li>
@@ -46,7 +46,6 @@
 					</div>
 				</div>
 				<div class="top-nav">
-					<span><a href="#">금융가이드</a></span>
 					<span><a href="#">관리자</a></span>
 					<span><a href="#">${id} 로그인</a></span>
 				</div>
