--- a/bankproject/src/main/resources/static/css/index.css
+++ b/bankproject/src/main/resources/static/css/index.css
@@ -9,23 +9,32 @@ main {max-width: 1200px; height: 100vh; margin: 0 auto;}
 
 
 /* 헤더 */
-header {width: 100%; height: 80px; position: fixed; z-index: 9999; transition: 0.3s; background: rgba(0,0,0,0.5); color: #fff; padding: 20px;}
-header > h1 {display: flex; justify-content: center; align-items: center; width: 150px;}
-header > .manager {display: flex;  justify-content: end; width: 100%;}
-header:hover{height: 300px; background: rgba(0,0,0,0.5); color: #fff;}
-header:hover #box-bg{opacity: 1; transition: all 0.1s;  font-weight: 300; font-size: 16px; }
+header {width: 100%; height: 80px; padding: 20px; color: #fff; background: rgba(0, 0, 0, 0.3); position: fixed; z-index: 999; transition: all 0.5s;}
+#header-box {max-width: 1200px; height: 100%; margin: 0 auto;  display: flex;  }
+#header-box > h1 {width: 200px;}
+#header-box > h1 > a {display: inline-block; vertical-align: middle;}
+.nav {width: 100%; text-align: center;}
+.nav > ul {display: flex; justify-content: space-around;}
+.main-menu {width: 150px; position: relative; font-size: 18px; font-weight: 500;}
+.main-menu > a, .sub-menu > a {display: inline-block; width: 100%; vertical-align: middle;}
+.nav  .sub-nav {position: absolute; top: 50px; width: 100%; }
+.sub-nav > .sub-menu {padding: 10px 0; opacity: 0; transition: all 0.3s; font-size: 16px; }
+
+header:hover{height: 250px; background: rgba(0, 0, 0, 0.3); transition: all 0.3s; }
+header:hover .sub-menu {opacity: 1; transition: all 0.1s;}
+
+
+/* header {width: 100%; height: 100px;  position: fixed; z-index: 9999; transition: 0.3s; background: rgba(0,0,0,0.5); color: #fff; }
+header:hover{height: 250px; background: rgba(0,0,0,0.5); color: #fff;}
 header:hover .sub-nav {opacity: 1; transition: all 0.1s;}
-header:hover .sub-nav > li {width: 100%;padding: 10px 0;}
 .sub-nav{opacity: 0; font-size: 16px; padding-top: 20px; }
 .sub-menu:hover {color: #26a7e2; transition: all 0.3s;}
-.sub-menu:hover > .main-menu {color: #26a7e2;}
-#header-box {display: flex; justify-content: space-between; max-width: 1200px; height: 80px;  margin: 0 auto;}
-#header-box > .logo img {width: 150px;}
-.top-nav {display: flex; gap: 10px;}
+.sub-menu:hover > .main-menu{color: #26a7e2;}
+#header-box {display: flex; justify-content: space-between; align-items: center; max-width: 1200px;  margin: 0 auto;}
+#header-box > .logo {width: 150px;} */
 
 /* 메뉴 */
-.nav {display: flex; align-items: center; gap: 100px; font-size: 18px; font-weight: 500; text-align: center; }
-#box-bg {opacity: 0;transition: 0.3s;padding-top: 30px;display: flex;}
+#box-bg {opacity: 0;transition: 0.3s;display: flex;}
 
 /* main */
 main {position: relative; width: 100%; height: 100%; }
