관리자및로그인btn수정

--- a/bankproject/src/main/resources/templates/index.html
+++ b/bankproject/src/main/resources/templates/index.html
@@ -46,15 +46,15 @@
 					</div>
 				</div>
 				<div class="top-nav">
-					<span><a href="#">관리자</a></span>
-					<span><a href="#">${id} 로그인</a></span>
+					<span class="top-btn"><a href="/admin">관리자</a></span>
+					<span class="top-btn"><a href="/login">로그인</a></span>
 				</div>
 			</div>
 		</header>
 		<main class="main">
 			<div class="main-banner">
 				<div class="main-text">
-					<h2>처음하는 금융생활,<br>바로 여기서 시작해보세요.</h2>
+					<h2>처음하는 금융 생활,<br>바로 여기서 시작해보세요.</h2>
 					<a href="#" class="banner-btn btn">자세히 보기</a>
 				</div>
 			</div>
