--- a/bankproject/src/main/resources/static/css/index.css
+++ b/bankproject/src/main/resources/static/css/index.css
@@ -10,7 +10,7 @@ main {max-width: 1200px; height: 100vh; margin: 0 auto;}
 
 /* 헤더 */
 header {width: 100%; height: 80px; padding: 20px; color: #fff; background: rgba(0, 0, 0, 0.3); position: fixed; z-index: 999; transition: all 0.5s;}
-#header-box {max-width: 1200px; height: 100%; margin: 0 auto;  display: flex;  }
+#header-box {max-width: 1200px; height: 100%; margin: 0 auto;  display: flex; justify-content: space-between;  }
 #header-box > h1 {width: 200px;}
 #header-box > h1 > a {display: inline-block; vertical-align: middle;}
 .nav {width: 100%; text-align: center;}
@@ -19,19 +19,16 @@ header {width: 100%; height: 80px; padding: 20px; color: #fff; background: rgba(
 .main-menu > a, .sub-menu > a {display: inline-block; width: 100%; vertical-align: middle;}
 .nav  .sub-nav {position: absolute; top: 50px; width: 100%; }
 .sub-nav > .sub-menu {padding: 10px 0; opacity: 0; transition: all 0.3s; font-size: 16px; }
+header:hover{height: 250px; background: rgba(0, 0, 0, 0.3);}
+header:hover .sub-menu {opacity: 1; transition: all 0.3s;}
+.sub-menu:hover {color: #26a7e2;}
+.main-menu:hover > a{color: #26a7e2;}
 
-header:hover{height: 250px; background: rgba(0, 0, 0, 0.3); transition: all 0.3s; }
-header:hover .sub-menu {opacity: 1; transition: all 0.1s;}
+/* 관리자 및 로그인 */
+.top-nav { display: flex; gap: 5px; align-items: top; font-size: 14px;}
+.top-btn {width: 100px; height: 30px; display: flex; align-items: center; text-align: center;  border-radius: 10px;background: rgba(255,255,255,0.3);}
+.top-btn > a {width: 100%;}
 
-
-/* header {width: 100%; height: 100px;  position: fixed; z-index: 9999; transition: 0.3s; background: rgba(0,0,0,0.5); color: #fff; }
-header:hover{height: 250px; background: rgba(0,0,0,0.5); color: #fff;}
-header:hover .sub-nav {opacity: 1; transition: all 0.1s;}
-.sub-nav{opacity: 0; font-size: 16px; padding-top: 20px; }
-.sub-menu:hover {color: #26a7e2; transition: all 0.3s;}
-.sub-menu:hover > .main-menu{color: #26a7e2;}
-#header-box {display: flex; justify-content: space-between; align-items: center; max-width: 1200px;  margin: 0 auto;}
-#header-box > .logo {width: 150px;} */
 
 /* 메뉴 */
 #box-bg {opacity: 0;transition: 0.3s;display: flex;}
