--- a/bankproject/src/main/resources/static/css/index.css
+++ b/bankproject/src/main/resources/static/css/index.css
@@ -8,39 +8,37 @@ body {color: #333; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-
 main {max-width: 1200px; height: 100vh; margin: 0 auto;}
 
 
-/* 헤더 */
+/* 헤더 메뉴 */
 header {width: 100%; height: 80px; padding: 20px; color: #fff; background: rgba(0, 0, 0, 0.3); position: fixed; z-index: 999; transition: all 0.5s;}
 #header-box {max-width: 1200px; height: 100%; margin: 0 auto;  display: flex; justify-content: space-between;  }
 #header-box > h1 {width: 200px;}
 #header-box > h1 > a {display: inline-block; vertical-align: middle;}
+#box-bg {opacity: 0;transition: 0.3s;display: flex;}
 .nav {width: 100%; text-align: center;}
 .nav > ul {display: flex; justify-content: space-around;}
-.main-menu {width: 150px; position: relative; font-size: 18px; font-weight: 500;}
-.main-menu > a, .sub-menu > a {display: inline-block; width: 100%; vertical-align: middle;}
 .nav  .sub-nav {position: absolute; top: 50px; width: 100%; }
 .sub-nav > .sub-menu {padding: 10px 0; opacity: 0; transition: all 0.3s; font-size: 16px; }
+.main-menu {width: 150px; position: relative; font-size: 18px; font-weight: 500;}
+.main-menu > a, .sub-menu > a {display: inline-block; width: 100%; vertical-align: middle;}
 header:hover{height: 250px; background: rgba(0, 0, 0, 0.3);}
 header:hover .sub-menu {opacity: 1; transition: all 0.3s;}
 .sub-menu:hover {color: #26a7e2;}
-.main-menu:hover > a{color: #26a7e2;}
 
 /* 관리자 및 로그인 */
-.top-nav { display: flex; gap: 5px; align-items: top; font-size: 14px;}
-.top-btn {width: 100px; height: 30px; display: flex; align-items: center; text-align: center;  border-radius: 10px;background: rgba(255,255,255,0.3);}
-.top-btn > a {width: 100%;}
+.top-nav {height: 30px;  display: flex;  gap: 10px; align-items: top; font-size: 14px; text-align: center;}
+.top-btn {width: 100px; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.3);  border-radius: 50px; }
 
-
-/* 메뉴 */
-#box-bg {opacity: 0;transition: 0.3s;display: flex;}
-
-/* main */
+/* 메인배너 */
 main {position: relative; width: 100%; height: 100%; }
 .main-banner {width: 100%; height: 800px; position: relative; background: url(../img/banner5.png) no-repeat  right; background-size: 80%;}
 .main-text {position: absolute; bottom: 200px; left: 0; color: #fff; line-height: 2; font-size: 24px;  }
 .main-text > a {display: inline-block; padding: 10px 40px; border: 1px solid #ccc; border-radius: 50px; background: #e0e0e0; color: #333; margin-top: 30px; font-weight: 500; font-size: 16px;}
 .main-text > a:hover {background: #fff; transition: all 0.5s;}
+
+/* 콘텐츠 박스 */
 .news-box {width: 100%; height: 100%; margin: 0 auto;}
 .news-box > h2 {font-size: 30px; font-weight: 500; color: #333;}
 .news-box > ul {display: grid;align-items: center; grid-template-columns: repeat(3, 1fr); row-gap: 30px; }
-.news-box > ul > li {width: 300px; height: 400px; margin: 0 auto; background: #26a7e2; border-radius: 50px; text-align: center; }
+.news-box > ul > li {width: 300px; height: 400px; margin: 0 auto; background: #26a7e2; border-radius: 50px; text-align: center; overflow: hidden;  transition: all 0.3s;}
+.news-box > ul > li:hover { transform: scale(1.1);overflow: hidden;}
 
