--- a/bankproject/src/main/resources/static/css/index.css
+++ b/bankproject/src/main/resources/static/css/index.css
@@ -3,13 +3,13 @@
 @import url('https://webfontworld.github.io/gmarket/GmarketSans.css');
 
 /* 공통 */
-body {color: #333; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-sizing: border-box; scroll-behavior: smooth; overflow-x: hidden;  width: 100%; height: 100vh;}
-#wrap {background: linear-gradient(to top,#000, #2C64F6); width: 100%;}
+body {color: #333; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-sizing: border-box; scroll-behavior: smooth; overflow-x: hidden;  width: 100%; height: auto; background: #121212;}
+#wrap { width: 100%; height: 100%; }
 main {max-width: 1200px; height: 100vh; margin: 0 auto;}
 
 
 /* 헤더 메뉴 */
-header {width: 100%; height: 80px; padding: 20px; color: #fff; background: rgba(0, 0, 0, 0.3); position: fixed; z-index: 999; transition: all 0.5s;}
+header {width: 100%; height: 80px; padding: 20px; color: #fff; background: rgba(255,255,255,0.1); position: fixed; z-index: 999; transition: all 0.5s;  backdrop-filter: blur(5px); }
 #header-box {max-width: 1200px; height: 100%; margin: 0 auto;  display: flex; justify-content: space-between;  }
 #header-box > h1 {width: 200px;}
 #header-box > h1 > a {display: inline-block; vertical-align: middle;}
@@ -26,19 +26,34 @@ header:hover .sub-menu {opacity: 1; transition: all 0.3s;}
 
 /* 관리자 및 로그인 */
 .top-nav {height: 30px;  display: flex;  gap: 10px; align-items: top; font-size: 14px; text-align: center;}
-.top-btn {width: 100px; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.3);  border-radius: 50px; }
+.top-btn {width: 100px; display: flex; align-items: center; justify-content: center; background: #26a7e2;  border-radius: 50px; }
 
 /* 메인배너 */
-main {position: relative; width: 100%; height: 100%; }
-.main-banner {width: 100%; height: 800px; position: relative; background: url(../img/banner5.png) no-repeat  right; background-size: 80%;}
-.main-text {position: absolute; bottom: 200px; left: 0; color: #fff; line-height: 2; font-size: 24px;  }
-.main-text > a {display: inline-block; padding: 10px 40px; border: 1px solid #ccc; border-radius: 50px; background: #e0e0e0; color: #333; margin-top: 30px; font-weight: 500; font-size: 16px;}
-.main-text > a:hover {background: #fff; transition: all 0.5s;}
+.banner {position: relative; width: 100%; height: 800px;background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 10%,
+    rgba(20, 20, 20, 0.25) 25%,
+    rgba(20, 20, 20, 0.5) 50%,
+    rgba(20, 20, 20, 0.6) 60%,
+    rgba(20, 20, 20, 0.85) 85%
+  ),
+  url(../img/banner6-1.webp)no-repeat center/cover;
+}
+.main-text {position: absolute; top: 45%; color: #fff; line-height: 2; font-size: 24px;  }
+.main-text > a {display: inline-block; padding: 10px 40px; border: none; border-radius: 50px; background: #26a7e2; color: #fff; margin-top: 70px; font-weight: 500; font-size: 16px;}
+.main-text > a:hover {background: #fff; transition: all 0.5s; color: #333;}
 
 /* 콘텐츠 박스 */
-.news-box {width: 100%; height: 100%; margin: 0 auto;}
-.news-box > h2 {font-size: 30px; font-weight: 500; color: #333;}
-.news-box > ul {display: grid;align-items: center; grid-template-columns: repeat(3, 1fr); row-gap: 30px; }
-.news-box > ul > li {width: 300px; height: 400px; margin: 0 auto; background: #26a7e2; border-radius: 50px; text-align: center; overflow: hidden;  transition: all 0.3s;}
-.news-box > ul > li:hover { transform: scale(1.1);overflow: hidden;}
+.news-box {width: 100%; height: 100%; margin: 0 auto; }
+.news-box > h2 {font-size: 30px; font-weight: 500; color: #ccc; padding: 50px 0;}
+.news-box > .card-con {display: grid;align-items: center; grid-template-columns: repeat(3, 1fr); gap: 100px; }
+.card-box {display: flex; flex-direction: column; height: 400px; background: #fff; border-radius: 20px; overflow: hidden;  color: #fff; box-shadow: 1px 2px 10px #333;}
+.card-box > .card-img {background: #fff; height: 50%; color: #333; overflow: hidden; }
+.card-box > .card-img:hover { transition: all 0.3s; opacity: 0.8;}
+.card-box > .card-detail {display: flex; flex-direction: column; padding: 20px; text-overflow: ellipsis;}
+.card-detail > .title, .content, .date {color: #333;}
+.card-detail > .title { font-size: 20px; margin-bottom: 10px; font-weight: 500;}
+.card-detail > .content { font-size: 16px;}
+.card-detail > .date {font-size: 12px; margin-top: 10px;}
+
 
