--- a/bankproject/src/main/resources/static/css/login.css
+++ b/bankproject/src/main/resources/static/css/login.css
@@ -6,10 +6,22 @@
 body {color: #333; font-family: 'Noto Sans KR', sans-serif, 'Gmarket Sans'; box-sizing: border-box; scroll-behavior: smooth; overflow-x: hidden;  width: 100%; height: 100vh;}
 
 /* 로그인 박스 */
-#login-main{background: linear-gradient(to top,#000, #2C64F6); width: 100%; height: 100%;  display: flex; justify-content: center; align-items: center; }
-.login-box {width: 400px; height: 500px; background: #fff; display: flex; flex-direction: column; align-items: center; border-radius: 30px;box-shadow: 5px 7px 20px #333;}
-.login-box > h1 {width: 200px; margin: 30px 0;}
+#login-main{background:#121212; width: 100%; height: 100%;  display: flex; justify-content: center; align-items: center; }
+.login-box {width: 500px; height: 600px; background: #000; display: flex; flex-direction: column; justify-content: space-around; align-items: center; border-radius: 30px; padding: 30px;}
+.login-box > h1 {width: 200px;}
 .login-box > form {display: flex; flex-direction: row;justify-content: center;}
 .login-box > form .idPass {display: flex; flex-direction: column; justify-content: center; align-items: center;}
-.login-box > form .id, .pass {width: 250px; padding: 10px; line-height: 3; outline: none; margin-bottom: 10px; border: 1px solid #ccc;}
-.loginbtn > input {background: #2C64F6; border: none; width: 100px; height: 150px; color: #fff; font-size: 20px; border-radius: 20px; margin-left: 20px; }
+.login-box > form .id, .pass {width: 350px; padding: 10px; line-height: 2; outline: none; margin-bottom: 10px; border: 1px solid #ccc; background: #000; color: #fff; font-size: 16px;}
+.loginbtn {background: #2C64F6; border: none; width: 100%; height: 50px; margin-top: 50px; color: #fff; font-size: 16px; border-radius: 10px; cursor: pointer; }
+.loginChk {width: 100%; display: flex; color: #ccc; justify-content: space-between; font-size: 14px;}
+.loginChk > .check > span {display: inline-block; padding-left: 10px;}
+
+/* SNS 로그인 버튼 */
+.sns {display: flex; gap: 20px; position: relative;}
+.sns > span {width: 50px; opacity: 0.5;}
+
+/* 회원가입 및 아이디비밀번호 찾기 */
+/* .newUser {margin-top: 20px; color: #ccc; font-size: 14px;} */
+.comment {display: block; text-align: center; color: #ccc; font-size: 12px;}
+.join {display: inline-block; color: #ccc; font-size: 14px; text-align: center;}
+.join > a {display: inline-block; padding-top: 5px;}
