--- a/bankproject/src/main/resources/templates/index.html
+++ b/bankproject/src/main/resources/templates/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>테스트</title>
+    <title>PASSBANK I 메인화면::안정된 금융생활</title>
+	<!-- css -->
+	<link rel="icon" th:href="@{/img/favicon-01.png}">
 	<link rel="stylesheet" th:href="@{/css/reset.css}">
 	<link rel="stylesheet" th:href="@{/css/all.min.css}">
 	<link rel="stylesheet" th:href="@{/css/fonts.css}">
 	<link rel="stylesheet" th:href="@{/css/index.css}">
-    <script  th:src="@{/js/index.js}"></script>
+	<!-- js -->
+    <script src="/js/index.js"></script>
 </head>
 <body>
 	<div id="wrap">
@@ -19,14 +22,14 @@
 					<ul>
 						<li class="main-menu"><a href="#">MY</a>
 							<ul class="sub-nav">
-								<li class="sub-menu"><a href="#">로그인</a></li>
-								<li class="sub-menu"><a href="#">회원가입</a></li>
+								<li class="sub-menu"><a href="#">마이계좌조회</a></li>
+								<li class="sub-menu"><a href="#">개인정보변경</a></li>
 							</ul>
 						</li>
-						<li class="main-menu"><a href="#">통장</a>
+						<li class="main-menu"><a href="#">상품</a>
 							<ul class="sub-nav">
-								<li class="sub-menu"><a href="#">통장개설</a></li>
-								<li class="sub-menu"><a href="#">계좌조회</a></li>
+								<li class="sub-menu"><a href="#">통장</a></li>
+								<li class="sub-menu"><a href="#">카드</a></li>
 							</ul>
 						</li>
 						<li class="main-menu"><a href="#">이체</a>
@@ -51,30 +54,26 @@
 				</div>
 			</div>
 		</header>
+		<div class="banner"></div>
 		<main class="main">
-			<div class="main-banner">
-				<div class="main-text">
-					<h2>처음하는 금융 생활,<br>바로 여기서 시작해보세요.</h2>
-					<a href="#" class="banner-btn btn">자세히 보기</a>
-				</div>
+			<div class="main-text">
+				<h2>처음하는 금융 생활,<br>바로 여기서 시작해보세요.</h2>
+				<a href="#" class="banner-btn btn">자세히 보기</a>
 			</div>
 			<div class="news-box">
-				<h2>News</h2>
+				<h2>금융 소식</h2>
 				<ul class="card-con">
-					<li><a href="#">콘텐츠1</a>
-					<ul class="card-box">
-						<li>썸네일${title}</li>
-						<li>제목${title}</li>
-						<li>내용${content}</li>
-						<li>파일${files}</li>
-						<li>날짜${date}</li>
-					</ul>
-					</li>
-					<li><a href="#">뉴스레터</a></li>
-					<li><a href="#">뉴스레터</a></li>
-					<li><a href="#">뉴스레터</a></li>
-					<li><a href="#">뉴스레터</a></li>
-					<li><a href="#">뉴스레터</a></li>
+					<!-- <li>
+						<ul class="card-box">
+							<li class="card-img">이미지${card-img}</li>
+							<li class="card-detail">
+								<span class="title">제목${title}</span>
+								<span class="content">내용${content}</span>
+								<span class="files">url${files}</span>
+								<span class="date">날짜${date}</span>
+							</li>
+						</ul>
+					</li> -->
 				</ul>
 			</div>
 		</main>
