--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -5,31 +5,37 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>login</title>
+    <!-- css -->
+    <link rel="icon" th:href="@{/img/favicon-01.png}">
     <link rel="stylesheet" th:href="@{/css/reset.css}">
 	<link rel="stylesheet" th:href="@{/css/all.min.css}">
 	<link rel="stylesheet" th:href="@{/css/fonts.css}">
 	<link rel="stylesheet" th:href="@{/css/login.css}">
-    <script  th:src="@{/js/login.js}"></script>
+    <!-- js -->
+    <script src="@{/js/login.js}"></script>
 </head>
 <body>
     <div id="login-main">
         <div class="login-box">
-            <h1 class="logo"><a href="/"><img src="/img/logo_black.png" alt="패스뱅크"></a></h1>
+            <h1 class="logo"><a href="/"><img src="/img/logo_white.png" alt="패스뱅크"></a></h1>
             <form action="/loginProc" method="post" name="loginForm" >
                 <div class="idPass">
-                    <input id="username" type="text" name="username" placeholder="아이디를 입력하세요." class="id"/>
-                    <input id="password" type="password" name="password" placeholder="패스워드를 입력하세요." class="pass"/>
-                </div>
-                <div class="loginbtn">
-                    <input type="submit" value="로그인" />
+                    <input id="username" type="text" name="username" placeholder="아이디" class="id"/>
+                    <input id="password" type="password" name="password" placeholder="패스워드" class="pass"/>
+                    <!-- 로그인 상태 유지 시켜주세요 -->
+                    <div class="loginChk">
+                        <div class="check"><input type="checkbox" name ="loginChk" value="true"><span>로그인 상태유지</span></div>
+                        <span class="newUser"><a href="#">회원가입</a></span>
+                    </div>
+                    <input type="submit" value="로그인" class="loginbtn"/>
                 </div>
             </form>
-            <div class="sns-login">
-                <span><a href="#">카카오</a></span>
-                <span><a href="#">네이버</a></span>
+            <div class="sns">
+                <span><a href="#"><img src="/img/kakao.png" alt="카카오로그인"></a></span>
+                <span><a href="#"><img src="/img/naver.png" alt="네이버로그인"></a></span>
             </div>
             <div class="join">
-                <a href="#">회원가입</a>
+                <span class="comment">아이디 혹은 패스워드를 잃어버리셨나요?</span>
                 <a href="#">아이디찾기</a>
                 <a href="#">비밀번호찾기</a>
             </div>
