--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>login</title>
+    <title>PASSBANK I 로그인</title>
     <!-- css -->
     <link rel="icon" th:href="@{/img/favicon-01.png}">
     <link rel="stylesheet" th:href="@{/css/reset.css}">
@@ -24,8 +24,8 @@
                     <input id="password" type="password" name="password" placeholder="패스워드" class="pass"/>
                     <!-- 로그인 상태 유지 시켜주세요 -->
                     <div class="loginChk">
-                        <div class="check"><input type="checkbox" name ="loginChk" value="true"><span>로그인 상태유지</span></div>
-                        <span class="newUser"><a href="#">회원가입</a></span>
+                        <div class="check"><input type="checkbox" name ="loginChk" value="true"><span>로그인 상태 유지</span></div>
+                        <span class="newUser"><a href="/join">회원가입</a></span>
                     </div>
                     <input type="submit" value="로그인" class="loginbtn"/>
                 </div>
