--- a/bankproject/src/main/resources/templates/join.html
+++ b/bankproject/src/main/resources/templates/join.html
@@ -21,7 +21,7 @@
 					<ul>
 						<li class="main-menu"><a href="#">MY</a>
 							<ul class="sub-nav">
-								<li class="sub-menu"><a href="#">마이계좌조회</a></li>
+								<li class="sub-menu"><a href="#">마이계좌조회하기</a></li>
 								<li class="sub-menu"><a href="#">개인정보변경</a></li>
 							</ul>
 						</li>
