--- a/bankproject/src/main/resources/templates/join.html
+++ b/bankproject/src/main/resources/templates/join.html
@@ -678,7 +678,7 @@
                         </tr>
                         <tr>
                             <th>계좌번호</th>
-                            <td><input type="text" name="password" placeholder=""/><button>생성하기</button><span>버튼을 누르면 자동으로 번호가 생성됩니다.</span></td>
+                            <td><input type="text" name="password" placeholder=""/><button class="num-btn">생성하기</button><span>버튼을 누르면 자동으로 번호가 생성됩니다.</span></td>
                         </tr>
                         <tr>
                             <th>계좌비밀번호</th>
