--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
                     <!-- 로그인 상태 유지 시켜주세요 -->
                     <div class="loginChk">
                         <div class="check"><input type="checkbox" name ="loginChk" value="true"><span>로그인 상태유지</span></div>
-                        <span class="newUser"><a href="#">회원가입</a></span>
+                        <span class="newUser"><a href="/join">회원가입</a></span>
                     </div>
                     <input type="submit" value="로그인" class="loginbtn"/>
                 </div>
