--- a/bankproject/src/main/resources/templates/login.html
+++ b/bankproject/src/main/resources/templates/login.html
@@ -4,12 +4,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>login</title>
+    <title>PASSBANK :: 로그인</title>
     <!-- css -->
     <link rel="icon" th:href="@{/img/favicon-01.png}">
-    <link rel="stylesheet" th:href="@{/css/reset.css}">
-	<link rel="stylesheet" th:href="@{/css/all.min.css}">
-	<link rel="stylesheet" th:href="@{/css/fonts.css}">
+    <link rel="stylesheet" th:href="@{/css/common/reset.css}">
+    <link rel="stylesheet" th:href="@{/css/common/all.min.css}">
+    <link rel="stylesheet" th:href="@{/css/common/fonts.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
 	<link rel="stylesheet" th:href="@{/css/login.css}">
     <!-- js -->
     <script src="@{/js/login.js}"></script>
