--- a/bankproject/src/main/resources/templates/join.html
+++ b/bankproject/src/main/resources/templates/join.html
@@ -660,17 +660,17 @@
                 </div>
                 <form action="/joinProc" method="post" name="joinForm" class="joinForm">
                     <table>
-                        <tr>
+                        <!-- <tr>
                             <th>이름</th>
                             <td><input type="text" name="username" placeholder="홍길동"/></td>
-                        </tr>
-                        <tr>
+                        </tr> -->
+                        <!-- <tr>
                             <th>생년월일</th>
-                            <td><input type="text" name="username" placeholder="19900101"/><span>년월일순으로 입력하세요. 예시: 1990년 1월 1일 - 19900101</span></td>
-                        </tr>
+                            <td><input type="text" name="asd" placeholder="19900101"/><span>년월일순으로 입력하세요. 예시: 1990년 1월 1일 - 19900101</span></td>
+                        </tr> -->
                         <tr>
                             <th>아이디</th>
-                            <td><input type="text" name="password" placeholder="ID"/><span>영문과 숫자를 포함하여 입력하세요.</span></td>
+                            <td><input type="text" name="username" placeholder="ID"/><span>영문과 숫자를 포함하여 입력하세요.</span></td>
                             
                         </tr>
                         <tr>
@@ -681,10 +681,10 @@
                             <th>계좌번호</th>
                             <td><input type="text" name="password" placeholder=""/><button class="num-btn">생성하기</button><span>버튼을 누르면 자동으로 번호가 생성됩니다.</span></td>
                         </tr> -->
-                        <tr>
+                        <!-- <tr>
                             <th>계좌비밀번호</th>
-                            <td><input type="password" name="password" placeholder="0000"/><span>4자리 ~ 6자리 숫자</span></td>
-                        </tr>
+                            <td><input type="password" name="asdfgh" placeholder="0000"/><span>4자리 ~ 6자리 숫자</span></td>
+                        </tr> -->
                     </table>
                         <div class="join-btn">
                             <input type="submit" value="확인" class="join-chk"/>
