--- a/bankproject/src/main/resources/templates/join.html
+++ b/bankproject/src/main/resources/templates/join.html
@@ -668,6 +668,10 @@
                             <th>생년월일</th>
                             <td><input type="text" name="asd" placeholder="19900101"/><span>년월일순으로 입력하세요. 예시: 1990년 1월 1일 - 19900101</span></td>
                         </tr> -->
+                        <!-- <tr>
+                            <th>휴대폰</th>
+                            <td><input type="text" name="asd" placeholder="01012345678"/></td>
+                        </tr> -->
                         <tr>
                             <th>아이디</th>
                             <td><input type="text" name="username" placeholder="ID"/><span>영문과 숫자를 포함하여 입력하세요.</span></td>
@@ -685,11 +689,12 @@
                             <th>계좌비밀번호</th>
                             <td><input type="password" name="password" placeholder="0000" maxlength="6" id="num"/><span>4자리 ~ 6자리 숫자</span><span id="num-text" style="color: red;"></span></td>
                         </tr>
+                        -->
                     </table>
-                        <div class="join-btn">
-                            <input type="submit" value="확인" class="join-chk"/>
-                            <input type="submit" value="취소" class="join-chk back"/>
-                        </div>
+                    <div class="join-btn">
+                        <input type="submit" value="확인" class="join-chk"/>
+                        <input type="submit" value="취소" class="join-chk back"/>
+                    </div>
                 </form>
             </div>
         </main>
